--- a/src/.vuepress/.temp/sass-palette/hope-style.scss
+++ b/src/.vuepress/.temp/sass-palette/hope-style.scss
@@ -1,1 +1,1 @@
-@forward "file:////Users/z/code/platform/src/.vuepress/styles/index.scss";
+@forward "file:///D:/Document/code/platform/src/.vuepress/styles/index.scss";
